--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
-  "presets": ["@babel/react"],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "presets": [
+    "@babel/preset-env",
+    "@babel/react"
+  ],
+  "plugins": [
+    // "transform-es2015-modules-umd",
+    // "@babel/plugin-proposal-class-properties",
+    // "@babel/plugin-transform-modules-umd",
+    // "add-module-exports",
+    // "@babel/plugin-transform-modules-umd"
+  ]
 }
