--- a/package.json
+++ b/package.json
@@ -28,7 +28,13 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "@babel/register": "^7.8.3",
-    "babel-preset-es3": "^1.0.1",
+    "eslint": "^6.8.0",
+    "eslint-config-react-app": "^5.1.0",
+    "eslint-plugin-flowtype": "^4.6.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
@@ -39,12 +45,19 @@
     "react-dom": "^16.8.2"
   },
   "scripts": {
-    "build": "NODE_ENV=production node_modules/.bin/babel ./src/index.js -o ./dist/index.js"
+    "build": "NODE_ENV=production node_modules/.bin/babel ./src/index.js -o ./dist/index.js",
+    "buildforexamples": "NODE_ENV=production node_modules/.bin/babel ./src/index.js -o ./examples/src/component/index.js"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "dependencies": {
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
+    "lodash": "^4.17.15",
+    "pretty-bytes": "^5.3.0",
+    "react-circular-progressbar": "^2.0.3",
+    "react-dropzone": "^10.2.1",
+    "react-firebase-file-uploader": "^2.4.3"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  }
 }
