Webpack BannerPlugin to add eslint comment

--- a/rfiu-examples/package.json
+++ b/rfiu-examples/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-npm-lib-dev-boilerplate-examples",
+  "name": "rfiu-examples",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
-    },
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
