--- a/component/package.json
+++ b/component/package.json
@@ -30,6 +30,7 @@
     "@babel/register": "^7.8.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.1.0",
     "eslint-plugin-flowtype": "^4.6.0",
@@ -40,6 +41,8 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "style-loader": "^1.1.3",
+    "watch": "^1.0.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
