--- a/component/package.json
+++ b/component/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-npm-lib-dev-boilerplate",
+  "name": "react-firebase-image-uploader",
   "version": "1.0.0",
   "main": "dist/index.js",
   "description": "Boilerplate for creating React NPM packages",
@@ -39,8 +39,8 @@
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "prettier": "^1.19.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "style-loader": "^1.1.3",
     "watch": "^1.0.2",
     "webpack": "^4.41.5",
@@ -48,12 +48,11 @@
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
   },
   "scripts": {
     "build": "npx webpack",
-    "buildforexamples": "npx webpack",
     "start": "watch 'npx webpack' ./src"
   },
   "dependencies": {
