--- a/rfiu-examples/package.json
+++ b/rfiu-examples/package.json
@@ -7,8 +7,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.7.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-firebase-image-uploader": "file:../component/react-firebase-image-uploader-1.0.0.tgz",
     "react-scripts": "3.3.0",
     "react-with-firebase-auth": "^1.3.0",
     "recompose": "^0.30.0"
