Installing dummy package, hooks error still...

--- a/component/package.json
+++ b/component/package.json
@@ -53,6 +53,7 @@
   },
   "scripts": {
     "build": "npx webpack",
+    "builddev": "npx webpack",
     "start": "watch 'npx webpack' ./src"
   },
   "dependencies": {
