--- a/component/package.json
+++ b/component/package.json
@@ -55,7 +55,7 @@
     "build": "npx webpack",
     "builddev": "npx webpack",
     "buildforexamples": "npx webpack",
-    "start": "watch 'npx webpack' ./src"
+    "start": "watch 'npm run buildforexamples' ./src"
   },
   "dependencies": {
     "@material-ui/core": "^4.8.3",
