--- a/rfiu-examples/package.json
+++ b/rfiu-examples/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.7.0",
     "react": "16.12.0",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "16.12.0",
     "react-scripts": "3.3.0",
     "react-with-firebase-auth": "^1.3.0",
