--- a/component/package.json
+++ b/component/package.json
@@ -2,7 +2,7 @@
   "name": "react-firebase-image-uploader",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "description": "Boilerplate for creating React NPM packages",
+  "description": "An image uploader controlfor Firebase Storage",
   "repository": {
     "type": "git",
     "url": "https://github.com/brownieboy/react-npm-lib-dev-boilerplate.git"
@@ -10,8 +10,9 @@
   "keywords": [
     "react-component",
     "react",
-    "boilerplatw",
-    "component"
+    "Firebase",
+    "component",
+    "uploader"
   ],
   "bugs": {
     "url": "https://github.com/brownieboy/react-npm-lib-dev-boilerplate/issues"
@@ -47,7 +48,7 @@
     "webpack-cli": "^3.3.10"
   },
   "peerDependencies": {
-    "prop-types": "^15.7.2",
+    "firebase": "^7.7.0",
     "react": "16.12.0",
     "react-dom": "16.12.0"
   },
@@ -58,8 +59,6 @@
     "start": "watch 'npm run buildforexamples' ./src"
   },
   "dependencies": {
-    "@material-ui/core": "^4.8.3",
-    "@material-ui/icons": "^4.5.1",
     "lodash": "^4.17.15",
     "pretty-bytes": "^5.3.0",
     "react-circular-progressbar": "^2.0.3",
