--- a/component/.babelrc
+++ b/component/.babelrc
@@ -4,10 +4,6 @@
     "@babel/react"
   ],
   "plugins": [
-    // "transform-es2015-modules-umd",
-    // "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-transform-modules-umd",
-    // "add-module-exports",
-    // "@babel/plugin-transform-modules-umd"
+    "@babel/plugin-transform-modules-umd"
   ]
 }
