--- a/component/.babelrc
+++ b/component/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": [
     "@babel/preset-env",
-    "@babel/react"
+    "@babel/react",
+    "@babel/flow"
   ],
   "plugins": [
     "@babel/plugin-transform-modules-umd"
