--- a/component/package.json
+++ b/component/package.json
@@ -27,6 +27,7 @@
     "@babel/plugin-transform-modules-umd": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
+    "@babel/preset-flow": "^7.16.7",
     "@babel/preset-react": "^7.8.3",
     "@babel/register": "^7.8.3",
     "babel-eslint": "^10.0.3",
@@ -39,6 +40,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "flow-bin": "^0.173.0",
     "prettier": "^1.19.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
@@ -48,9 +50,9 @@
     "webpack-cli": "^3.3.10"
   },
   "peerDependencies": {
-    "firebase": "^7.7.0",
-    "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "firebase": "^9.6.7",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "scripts": {
     "build": "npx webpack",
@@ -61,8 +63,8 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "pretty-bytes": "^5.3.0",
-    "react-dropzone": "^10.2.1",
-    "react-firebase-file-uploader": "^2.4.3"
+    "react-dropzone": "^12.0.4",
+    "react-firebase-file-uploader": "^2.4.4"
   },
   "eslintConfig": {
     "extends": "react-app"
