--- a/component/.babelrc
+++ b/component/.babelrc
@@ -5,6 +5,12 @@
     "@babel/flow"
   ],
   "plugins": [
-    "@babel/plugin-transform-modules-umd"
+    "@babel/plugin-transform-modules-umd",
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ]
   ]
 }
