--- a/component/package.json
+++ b/component/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.8.3",
     "@babel/plugin-transform-modules-umd": "^7.8.3",
@@ -30,21 +31,17 @@
     "@babel/preset-flow": "^7.16.7",
     "@babel/preset-react": "^7.8.3",
     "@babel/register": "^7.8.3",
-    "babel-eslint": "^10.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.1.0",
-    "eslint-plugin-flowtype": "^4.6.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "flow-bin": "^0.173.0",
+    "eslint": "^8.24.0",
+    "eslint-plugin-react": "^7.31.8",
     "prettier": "^1.19.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "style-loader": "^1.1.3",
+    "typescript": "^4.8.4",
     "watch": "^1.0.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
@@ -55,7 +52,7 @@
     "react-dom": "17.0.2"
   },
   "scripts": {
-    "build": "webpack -p",
+    "build": "webpack",
     "start": "watch 'webpack' ./src"
   },
   "dependencies": {
@@ -63,8 +60,5 @@
     "pretty-bytes": "^5.3.0",
     "react-dropzone": "^12.0.4",
     "react-firebase-file-uploader": "^2.4.4"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   }
 }
