chore: chunk error gone, React error

--- a/component/.browserslistrc
+++ b/component/.browserslistrc
@@ -1,3 +1,4 @@
-defaults
-IE 11
-maintained node versions
+# Browsers that we support
+
+defaults and supports es6-module
+# maintained node versions
