--- a/component/package.json
+++ b/component/package.json
@@ -52,7 +52,7 @@
     "react-dom": "17.0.2"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --mode production",
     "start": "watch 'webpack' ./src"
   },
   "dependencies": {
