--- a/component/package.json
+++ b/component/package.json
@@ -38,8 +38,8 @@
     "eslint": "^8.24.0",
     "eslint-plugin-react": "^7.31.8",
     "prettier": "^2.7.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "style-loader": "^1.1.3",
     "typescript": "^4.8.4",
     "watch": "^1.0.2",
