--- a/component/package.json
+++ b/component/package.json
@@ -56,6 +56,7 @@
     "start": "watch 'webpack' ./src"
   },
   "dependencies": {
+    "crypto-browserify": "^3.12.0",
     "lodash": "^4.17.15",
     "pretty-bytes": "^5.3.0",
     "react-dropzone": "^12.0.4",
