--- a/demo2/package.json
+++ b/demo2/package.json
@@ -7,11 +7,12 @@
   "dependencies": {
     "axios": "^0.26.1",
     "firebase": "^9.10.0",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-circular-progressbar": "^2.0.4",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.2",
-    "react-with-firebase-auth": "^1.4.0"
+    "react-with-firebase-auth": "^1.4.0",
+    "recompose": "^0.30.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
@@ -22,9 +23,14 @@
     "@material-ui/icons": "^4.11.2",
     "@svgr/webpack": "^6.2.1",
     "babel-loader": "^8.2.4",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "https-browserify": "^1.0.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
