--- a/component/package.json
+++ b/component/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-flow": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.9",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
