--- a/component/.babelrc
+++ b/component/.babelrc
@@ -1,9 +1,5 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    "@babel/react",
-    "@babel/flow"
-  ],
+  "presets": ["@babel/preset-env", ["@babel/preset-react", { "runtime": "automatic" }]],
   "plugins": [
     "@babel/plugin-transform-modules-umd",
     [
