--- a/component/package.json
+++ b/component/package.json
@@ -47,9 +47,8 @@
     "webpack-cli": "^4.10.0"
   },
   "peerDependencies": {
-    "firebase": "^9.6.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^18.2.01",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "build": "webpack --mode production",
@@ -57,6 +56,7 @@
   },
   "dependencies": {
     "crypto-browserify": "^3.12.0",
+    "firebase": "^9.10.0",
     "lodash": "^4.17.15",
     "pretty-bytes": "^5.3.0",
     "react-dropzone": "^12.0.4",
