--- a/demo2/package.json
+++ b/demo2/package.json
@@ -11,11 +11,12 @@
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.2",
-    "react-with-firebase-auth": "^1.4.0",
+    "react-with-firebase-auth": "^1.4.1",
     "recompose": "^0.30.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
@@ -26,6 +27,8 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^6.7.1",
+    "eslint": "^8.24.0",
+    "eslint-plugin-react": "^7.31.8",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "https-browserify": "^1.0.0",
