--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
   "name": "react-firebase-image-upload-control",
   "version": "1.3.1",
-  "main": "dist/index.js",
-  "dependencies": {
-    "@mui/material": "^5.10.12",
-    "firebase": "^9.13.0"
-  }
+  "main": "dist/index.js"
 }
