--- a/demo/package.json
+++ b/demo/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "rfiu-demo",
+  "name": "demo3",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/base": "^5.0.0-alpha.104",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.12",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "crypto-browserify": "^3.12.0",
-    "firebase": "^9.6.8",
+    "firebase": "^9.13.0",
     "react": "^18.2.0",
-    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "react-with-firebase-auth": "^1.4.0",
+    "react-scripts": "5.0.1",
     "recompose": "^0.30.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-app-rewired": "^2.2.1"
   }
 }
