--- a/component/package.json
+++ b/component/package.json
@@ -31,6 +31,10 @@
     "@babel/preset-flow": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/register": "^7.18.9",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
     "babel-loader": "^8.2.5",
@@ -41,6 +45,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "style-loader": "^1.1.3",
+    "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "watch": "^1.0.2",
     "webpack": "^5.74.0",
