--- a/component/package.json
+++ b/component/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/register": "^7.18.9",
     "@types/jest": "^29.2.2",
+    "@types/lodash": "^4.14.188",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
