--- a/component/package.json
+++ b/component/package.json
@@ -42,6 +42,7 @@
     "css-loader": "^3.4.2",
     "eslint": "^8.24.0",
     "eslint-plugin-react": "^7.31.8",
+    "firebase": "^9.13.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -53,6 +54,7 @@
     "webpack-cli": "^4.10.0"
   },
   "peerDependencies": {
+    "firebase": "^9.13.0",
     "react": "^18.2.01",
     "react-dom": "^18.2.0"
   },
