--- a/component/package.json
+++ b/component/package.json
@@ -41,13 +41,17 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^3.4.2",
     "eslint": "^8.24.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.31.8",
     "firebase": "^9.13.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "style-loader": "^1.1.3",
     "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "watch": "^1.0.2",
     "webpack": "^5.74.0",
@@ -60,13 +64,15 @@
   },
   "scripts": {
     "build": "webpack --mode production",
-    "start": "watch 'webpack' ./src"
+    "start": "watch 'webpack' ./src",
+    "test": "jest"
   },
   "dependencies": {
     "crypto-browserify": "^3.12.0",
     "lodash": "^4.17.15",
     "pretty-bytes": "^5.3.0",
     "react-dropzone": "^14.2.3",
-    "react-firebase-file-uploader": "^2.4.4"
+    "react-firebase-file-uploader": "^2.4.4",
+    "react-test-renderer": "^18.2.0"
   }
 }
