--- a/component/package.json
+++ b/component/package.json
@@ -68,6 +68,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@testing-library/react": "^13.4.0",
     "crypto-browserify": "^3.12.0",
     "lodash": "^4.17.15",
     "pretty-bytes": "^5.3.0",
