--- a/component/.babelrc
+++ b/component/.babelrc
@@ -1,5 +1,10 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-flow", ["@babel/preset-react", { "runtime": "automatic" }]],
+  "presets": [
+    "@babel/preset-env",
+    // "@babel/preset-flow",
+    ["@babel/preset-react", {"runtime": "automatic"}],
+    "@babel/preset-typescript"
+  ],
   "plugins": [
     "@babel/plugin-transform-modules-umd",
     [
