--- a/component/package.json
+++ b/component/package.json
@@ -2,6 +2,7 @@
   "name": "react-firebase-image-upload-control",
   "version": "1.3.0",
   "main": "dist/index.js",
+  "type": "module",
   "description": "An image uploader control for Firebase Storage",
   "repository": {
     "type": "git",
@@ -68,6 +69,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@testing-library/react": "^13.4.0",
     "crypto-browserify": "^3.12.0",
     "lodash": "^4.17.15",
