--- a/component/package.json
+++ b/component/package.json
@@ -2,7 +2,6 @@
   "name": "react-firebase-image-upload-control",
   "version": "1.3.0",
   "main": "dist/index.js",
-  "type": "module",
   "description": "An image uploader control for Firebase Storage",
   "repository": {
     "type": "git",
@@ -64,7 +63,7 @@
     "react-dom": "^18.2.0"
   },
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --mode production && cp ./src/*.d.ts ../dist",
     "start": "watch 'webpack' ./src",
     "test": "jest"
   },
