--- a/package.json
+++ b/package.json
@@ -1,5 +1,115 @@
 {
   "name": "react-firebase-image-upload-control",
   "version": "1.3.1",
-  "main": "dist/index.js"
+  "description": "An image uploader control for Firebase Storage",
+  "keywords": [
+    "react-component",
+    "react",
+    "Firebase",
+    "component",
+    "uploader"
+  ],
+  "bugs": {
+    "url": "https://github.com/brownieboy/react-firebase-image-upload-control/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brownieboy/react-firebase-image-upload-control"
+  },
+  "license": "MIT",
+  "author": "Michael Brown <brownieboy@gmail.com>",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "webpack --config ./component/webpack.config.js --mode production && cp ./component/src/*.d.ts ./dist",
+    "build:dev": "webpack --config ./component/webpack.config.js --mode development && cp ./component/src/*.d.ts ./dist",
+    "start": "watch 'webpack --config ./component/webpack.config.js' ./component/src",
+    "test": "jest --config ./component/jest.config.ts",
+    "build:demo": "react-scripts build",
+    "start:demo": "react-scripts start",
+    "test:demo": "react-scripts test"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "dependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/base": "^5.0.0-alpha.104",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.12",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "crypto-browserify": "^3.12.0",
+    "firebase": "^9.13.0",
+    "lodash": "^4.17.15",
+    "pretty-bytes": "^5.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-firebase-file-uploader": "^2.4.4",
+    "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
+    "recompose": "^0.30.0",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.3",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@babel/plugin-transform-modules-umd": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/preset-env": "^7.19.3",
+    "@babel/preset-flow": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.18.9",
+    "@types/jest": "^29.2.2",
+    "@types/lodash": "^4.14.188",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^3.4.2",
+    "eslint": "^8.24.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.31.8",
+    "firebase": "^9.13.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "style-loader": "^1.1.3",
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
+    "watch": "^1.0.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "peerDependencies": {
+    "firebase": "^9.13.0",
+    "react": "^18.2.01",
+    "react-dom": "^18.2.0"
+  }
 }
