--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "name": "react-firebase-image-upload-control",
   "version": "1.3.1",
-  "main": "dist/index.js"
+  "main": "dist/index.js",
+  "private": true,
+  "workspaces": [
+    "component",
+    "demo"
+  ],
+  "scripts": {
+    "start": "lerna run start",
+    "test": "lerna run test"
+  },
+  "devDependencies": {
+    "lerna": "^6.0.3"
+  }
 }
