--- a/component/package.json
+++ b/component/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-firebase-image-upload-control",
+  "name": "component",
   "version": "1.3.0",
   "main": "dist/index.js",
   "description": "An image uploader control for Firebase Storage",
