--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
   "name": "react-firebase-image-upload-control",
-  "version": "1.3.1",
+  "version": "2.0.0",
   "main": "dist/index.js",
+  "description": "An image uploader control for Firebase Storage",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brownieboy/react-firebase-image-upload-control"
+  },
+  "keywords": [
+    "react-component",
+    "react",
+    "Firebase",
+    "component",
+    "uploader"
+  ],
+  "bugs": {
+    "url": "https://github.com/brownieboy/react-firebase-image-upload-control/issues"
+  },
   "private": true,
   "workspaces": [
     "component",
     "demo"
   ],
   "scripts": {
+    "build": "lerna run build --scope=component",
     "start": "lerna run start",
     "test": "lerna run test --scope=component"
   },
