--- a/component/package.json
+++ b/component/package.json
@@ -52,6 +52,7 @@
     "style-loader": "^1.1.3",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.23.21",
     "typescript": "^4.8.4",
     "watch": "^1.0.2",
     "webpack": "^5.74.0",
