chore: all uploader progs documented

--- a/component/package.json
+++ b/component/package.json
@@ -66,6 +66,7 @@
   "scripts": {
     "build": "webpack --mode production && cp ./src/*.d.ts ../dist",
     "build:dev": "webpack --mode development && cp ./src/*.d.ts ../dist",
+    "docs": "typedoc ./src/index.tsx",
     "start": "watch 'webpack' ./src",
     "test": "jest"
   },
