--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "scripts": {
     "build": "lerna run build --scope=component",
+    "docs": "lerna run docs",
     "start": "lerna run start",
     "test": "lerna run test --scope=component"
   },
