--- a/component/package.json
+++ b/component/package.json
@@ -49,6 +49,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rimraf": "^3.0.2",
     "style-loader": "^1.1.3",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
@@ -66,8 +67,7 @@
   },
   "scripts": {
     "build": "webpack --mode production && cp ./src/*.d.ts ../dist",
-    "build:dev": "webpack --mode development && cp ./src/*.d.ts ../dist",
-    "docs": "typedoc ./src/index.tsx --name react-firebase-image-upload-control --plugin typedoc-plugin-markdown ",
+    "docs": "../node_modules/rimraf/bin.js docs && typedoc ./src/index.tsx --name react-firebase-image-upload-control",
     "start": "watch 'webpack' ./src",
     "test": "jest"
   },
