--- a/component/package.json
+++ b/component/package.json
@@ -44,6 +44,8 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.31.8",
     "firebase": "^9.13.0",
+    "gulp": "^4.0.2",
+    "gulp-rename": "^2.0.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.7.1",
@@ -67,7 +69,7 @@
   },
   "scripts": {
     "build": "webpack --mode production && cp ./src/*.d.ts ../dist",
-    "docs": "cp README-source.md README.md && ../node_modules/rimraf/bin.js docs && typedoc ./src/index.tsx --name react-firebase-image-upload-control --plugin typedoc-plugin-markdown",
+    "docs": "gulp copy-readme-src && ../node_modules/rimraf/bin.js docs && typedoc ./src/index.tsx --name react-firebase-image-upload-control --plugin typedoc-plugin-markdown",
     "start": "watch 'webpack' ./src",
     "test": "jest"
   },
